--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.330.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
